@@ -3,21 +3,19 @@ import de.tototec.sbuild.TargetRefs._
 import de.tototec.sbuild.ant._
 import de.tototec.sbuild.ant.tasks._
 
-@version("0.1.0.9002")
+@version("0.4.0")
 @classpath(
-  "http://repo1.maven.org/maven2/org/apache/ant/ant/1.8.3/ant-1.8.3.jar",
-  "../../../../target/de.tototec.sbuild.addons.jar"
+  "mvn:org.apache.ant:ant:1.8.3",
+  "../../../../target/de.tototec.sbuild.addons-0.4.0.9002.jar"
 )
 class SBuild(implicit project: Project) {
 
   var jar = "target/de.tototec.sbuild.addons.junit.test.jar"
 
-  SchemeHandler("mvn", new MvnSchemeHandler())
-
   val testCp = "mvn:junit:junit:4.10" ~
     jar
 
-  Target("phony:clean") dependsOn "clean-classes" exec {
+  Target("phony:clean").evictCache dependsOn "clean-classes" exec {
     AntDelete(dir = Path("target"))
     AntDelete(dir = Path("src"))
   }
@@ -56,10 +54,14 @@ public class TestClassTest {
   }
 }"""))
 
+  val sources = "scan:src/main/java"
+
   var classesDep = classes.map(c => TargetRefs(c._1)).reduceLeft(_ ~ _)
 
-  classes foreach { 
-    case (file, content) => 
+  Target(sources) dependsOn classesDep
+
+  classes foreach {
+    case (file, content) =>
       Target(file) dependsOn project.projectFile exec {
         AntEcho(file = Path(file), message = content)
       }
@@ -71,45 +73,34 @@ public class TestClassTest {
     }
   }
 
-  Target("phony:compile") dependsOn classesDep exec { ctx: TargetContext =>
-    IfNotUpToDate(Path("src/main/java"), Path("target"), ctx) {
-      AntMkdir(dir = Path("target/classes"))
-      AntJavac(
-        fork = true,
-        source = "1.6",
-        target = "1.6",
-        debug = true,
-        includeAntRuntime = false,
-        classpath = AntPath(locations = ctx.fileDependencies),
-        srcDir = AntPath("src/main/java"),
-        destDir = Path("target/classes")
-      )
-    }
+  
+
+  Target("phony:compile").cacheable dependsOn sources exec { ctx: TargetContext =>
+    addons.java.Javac(
+      fork = true, source = "1.6", target = "1.6", debugInfo = "vars",
+      sources = sources.files,
+      destDir = Path("target/classes")
+    )
   }
 
   Target(jar) dependsOn "compile" exec { ctx: TargetContext =>
     AntJar(destFile = ctx.targetFile.get, baseDir = Path("target/classes"))
   }
 
-  Target("phony:testCompile") dependsOn classesDep ~ testCp exec { ctx: TargetContext =>
-    IfNotUpToDate(Path("src/test/java"), Path("target"), ctx) {
-      AntMkdir(dir = Path("target/test-classes"))
-      AntJavac(
-        fork = true,
-        source = "1.6",
-        target = "1.6",
-        debug = true,
-        includeAntRuntime = false,
-        classpath = AntPath(locations = ctx.fileDependencies),
-        srcDir = AntPath("src/test/java"),
+  Target("scan:src/test/java") dependsOn classesDep
+
+  Target("phony:testCompile").cacheable dependsOn "scan:src/test/java" ~ testCp exec {
+    addons.java.Javac(
+        fork = true, source = "1.6", target = "1.6", debugInfo = "vars",
+        classpath = testCp.files,
+        sources = "scan:src/test/java".files,
         destDir = Path("target/test-classes")
-      )
-    }
+    )
   }
 
-  Target("phony:test") dependsOn testCp ~ "testCompile" exec { ctx: TargetContext =>
+  Target("phony:test") dependsOn testCp ~ "testCompile" exec {
     addons.junit.JUnit(
-      classpath = ctx.fileDependencies ++ Seq(Path("target/test-classes")),
+      classpath = testCp.files ++ Seq(Path("target/test-classes")),
       classes = Seq("de.tototec.sbuild.addons.junit.test.TestClassTest"),
       failOnError = false
     )
